adds time of day link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <h1>Maritza Medina</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="/web150/timeofday/" target="_blank">Time Of Day</a>
+            <a href="https://mxmaritzaa.github.io/seasonal-styles/index.html" target="_blank">Time Of Day</a>
             <a href="/web150/daily/" target="_blank">Daily Grind</a>
             <a href="/web150/domplay/" target="_blank">DOM Play</a>
             <a href="https://github.com/mxmaritzaa" target="_blank">GitHub</a>
